# ALTRepo-package-compare

./: .gitignore  CMakeLists.txt  README.md
.gear/: pkgcmp.spec  rules
.gear/tags/: list
CLI-utility/: CMakeLists.txt  main.cpp
CLI-utility/src/: main.cpp
Package compare lib/: lib.cpp  lib.hpp
Package-compare-lib/: CMakeLists.txt
Package-compare-lib/src/: lib.cpp  libpkgcmp.cpp  libpkgcmp.hpp  private_include.hpp
Package-compare-lib/tests/: test.cpp
